<resources>
    <string name="app_name">Ohunelo</string>
    <string name="loading_dashboard">Loading Dashboard</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_source_image">Recipe Source Image</string>
    <string name="category">Category</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="see_all">See all</string>
    <string name="drink">Drink</string>
    <string name="random">Random</string>
    <string name="recipes">Recipes</string>
    <string name="view_more">… View More</string>
    <string name="view_less">View Less</string>
    <string name="carbs_percent">%d%% carb</string>
    <string name="protein_percent">%d%% protein</string>
    <string name="fat_percent">%d%% fat</string>
    <string name="carbs">%s carb</string>
    <string name="protein">%s protein</string>
    <string name="fat">%s fat</string>
    <string name="calories">%s Kcal</string>
    <string name="carbohydrate_icon">Carbohydrate Icon</string>
    <string name="protein_icon">Protein Icon</string>
    <string name="fat_icon">Pizza icon that represents fat</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_image">Ingredient image</string>
    <string name="analyzed_instruction">Analyzed Instruction</string>
    <string name="navigate_to_steps_screen_icon">Navigate to steps screen icon</string>
    <string name="no_instructions">No Instructions</string>
    <string name="no_ingredients">No Ingredients</string>
    <string name="step_number_text">Step %d</string>
    <string name="no_steps">No Steps</string>
    <string name="steps">Steps</string>
    <string name="amount_of_calories_icon">amount of calories icon</string>
    <string name="minutes_short">%d Min</string>
    <string name="retry">Retry</string>
    <string name="error_image">Error Image</string>
    <string name="try_again">Try Again</string>
    <string name="more_details">More Details</string>
    <string name="search_recipe">Search Recipe...</string>
    <string name="go_back_to_previous_screen">Go back to previous screen</string>
    <string name="navigate_to_recipe_details_screen">navigate to recipe details screen</string>
    <string name="notifications">Notifications</string>
    <string name="notification_type_image">Notification type image</string>
    <string name="food_joke">Food Joke</string>
    <string name="food_trivia">Food Trivia</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="older">Older</string>
    <string name="close_expanded_notification">Close Expanded Notification</string>
    <string name="notification_type_icon">Notification Type icon</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="reset_password_instructions_text">Don\'t worry! It happens. Please enter the e-mail
        address associated with your account and we\'ll send you an email to
        reset your password.</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="continue_text">Continue</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_twitter">Register with Twitter</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verify_email">Verify Email</string>
    <string name="open_email_icon">Open Email Icon</string>
    <string name="verify_your_email_address">Verify your email address</string>
    <string name="verify_your_email_instruction_1">We have just sent an email verification link to %s. Please check your email and click on the link to verify your email address.</string>
    <string name="verify_your_email_instruction_2">If not auto redirected after verification, click on the continue button below.</string>
    <string name="resend_e_mail_link">Resend E-mail link</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="content_title_1">Begin Your Culinary Adventure</string>
    <string name="content_title_2">Discover some of the best recipes you needed</string>
    <string name="content_title_3">Cooking Simplified</string>
    <string name="content_description_1">Embark on a journey of flavors and create memorable meals that will impress</string>
    <string name="content_description_2">5000+ healthy recipes made by people for your healthy life</string>
    <string name="content_description_3">Follow easy step-by-step guides to create amazing meals effortlessly</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="logout_icon">Logout icon</string>
    <string name="edit_profile_icon">edit profile icon</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_must_contain">Password must contain at least 1 digit, symbol and be at least 8 characters long</string>
    <string name="name_should">Name should be 3 - %d characters long, no whitespaces, numbers and symbols are allowed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_registered_but_user_null">User registration successful, but no user was created</string>
    <string name="user_logged_in_but_user_null">Login failed, user not found</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="email_already_in_use">The email address is already in use by another account.</string>
    <string name="send_email_link_failed">Send Email verification link failed</string>
    <string name="too_many_requests">Requests from this device have been blocked due to unusual activity. Try again later</string>
    <string name="network_error_occured">A network error has occurred</string>
    <string name="invalid_user">There is no user record corresponding to this identifier</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="back">Back</string>
    <string name="reset_password_email">Reset password email sent successfully</string>
    <string name="reset_password_email_failed">Reset password email not sent</string>
    <string name="no_user_record_corresponding">There is no user record corresponding to this identifier</string>
    <string name="sign_in_failed">Sign in with %s failed</string>
    <string name="sign_in_cancelled">Sign in with %s cancelled</string>
    <string name="caller_temporarily_blocked">Caller has been temporarily blocked</string>
    <string name="facebook_app_id">270692319216293</string>
    <string name="facebook_client_token">93899d5d6e771ca909e5ecdc5fcabb1f</string>
    <string name="user_name_update_failed">Username update failed</string>
    <string name="no_user_found">No user found</string>
    <string name="update_user_name">Update User Name</string>
    <string name="update_user_name_instruction">It seems your User Name was not properly registered, please update it using the form below.</string>
    <string name="failed_to_get_recipes">Failed to get recipes</string>
    <string name="food_error_image">Food error image</string>
    <string name="oops_something_went_wrong">Oops, something went wrong! Please swipe down to refresh.</string>
    <string name="opps_no_recipes_found">Opps, No Recipes found!</string>
    <string name="rate_limit_exceeded">Rate limit exceeded</string>
    <string name="no_recipes_here">No Recipes Here!</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="edit_was_successful">Edit was successful</string>
    <string name="edit_email_failed">Failed to update email</string>
    <string name="edit_password_failed">Failed to update password</string>
    <string name="edit_email_image">edit email image</string>
    <string name="edit_password_image">edit password image</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_email">Edit Email</string>
    <string name="enter_new_email_address">Enter new email address</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reauthenticate_message">You haven\'t logged in for sometime, you need to be re-authenticated</string>
    <string name="reauthenticate_success">re-authentication successful, please proceed to update</string>
    <string name="reauthenticate_fail">re-authentication failed</string>
    <string name="re_authenticate">Re-authenticate</string>
    <string name="unknown_user">Unknown user</string>
    <string name="weak_password">Weak password</string>
    <string name="user_credential_no_longer_valid">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="failed_to_get_food_trivia">Failed to get food trivia!</string>
    <string name="failed_to_get_food_joke">Failed to get food joke!</string>
    <string name="no_notifications">No Notifications</string>
    <string name="permission_request">Ohunelo requires the notification permission</string>
    <string name="permission_rationale">Ohunelo wants to send you daily food jokes and trivia to keep your kitchen fun! Grant notification permission to receive these delightful tidbits.</string>
    <string name="grant">Grant</string>
    <string name="channel_name">food trivia/food joke</string>
    <string name="channel_description">All food trivia and food jokes</string>
    <string name="account_already_exist">Account already exists with different credential</string>
    <string name="credential_already_in_use">Credential is already in use</string>
    <string name="user_disabled">This user seems to have been disabled</string>
    <string name="user_token_expired">User token seems to have expired</string>
    <string name="invalid_user_token">Invalid user token</string>
    <string name="unauthorized_request">Unauthorized request</string>
</resources>