<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView
            android:id="@+id/home_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_screen_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:paddingHorizontal="@dimen/grid_2"
                    android:paddingTop="@dimen/grid_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:context=".presentation.ui.fragment.HomeFragment">

                    <ImageView
                        android:id="@+id/time_of_day_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/shimmer_view_bg"
                        android:src="@drawable/moon_icon" />

                    <TextView
                        android:id="@+id/time_of_day_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15dp"
                        android:layout_marginStart="@dimen/grid_0_25"
                        android:layout_marginBottom="@dimen/grid_0_25"
                        android:background="@drawable/shimmer_view_bg"
                        app:layout_constraintBottom_toBottomOf="@+id/time_of_day_image_view"
                        app:layout_constraintStart_toEndOf="@+id/time_of_day_image_view"
                        app:layout_constraintTop_toTopOf="@+id/time_of_day_image_view"
                        android:text="@string/good_morning" />

                    <TextView
                        android:id="@+id/user_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15dp"
                        android:layout_marginTop="@dimen/grid_0_5"
                        android:background="@drawable/shimmer_view_bg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/time_of_day_text_view"
                        android:text="Oscar Iyareeeeee" />

                    <TextView
                        android:id="@+id/random_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15dp"
                        android:layout_marginTop="@dimen/grid_2"
                        android:text="@string/random"
                        android:background="@drawable/shimmer_view_bg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/user_name_text_view" />

                    <LinearLayout
                        android:id="@+id/random_recipes_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/grid_1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/random_text_view">
                        <include
                            layout="@layout/randoms_item" />
                        <include
                            layout="@layout/randoms_item" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/category_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_15dp"
                        android:layout_marginTop="@dimen/grid_2"
                        android:text="@string/category"
                        android:background="@drawable/shimmer_view_bg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/random_recipes_recycler" />

                    <HorizontalScrollView
                        android:id="@+id/chip_group_scroll_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        app:layout_constraintTop_toBottomOf="@+id/category_text_view">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/category_chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:singleLine="true"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/main_course_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/main_course"
                                />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/side_dish_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/side_dish"
                                />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/dessert_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dessert"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/appetizer_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/appetizer"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/salad_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salad"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/bread_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bread"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/breakfast_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/breakfast"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/soup_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/soup"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/beverage_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/beverage"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/sauce_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sauce"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/marinade_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/marinade"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/fingerfood_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/finger_food"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/snack_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/snack"
                                 />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/drink_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/grid_2"
                                android:text="@string/drink"
                                 />


                        </com.google.android.material.chip.ChipGroup>

                    </HorizontalScrollView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/recipes_by_category_recycler_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group_scroll_view">

                        <TextView
                            android:id="@+id/title_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_15dp"
                            android:text="@string/recipes"
                            android:background="@drawable/shimmer_view_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/see_all_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_15dp"
                            android:text="@string/see_all"
                            android:background="@drawable/shimmer_view_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <LinearLayout
                        android:id="@+id/recipes_by_category_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_0dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipes_by_category_recycler_header">

                        <include
                            layout="@layout/recipes_by_category_item"/>
                        <include
                            layout="@layout/recipes_by_category_item"/>
                        <include
                            layout="@layout/recipes_by_category_item"/>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</layout>