<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.jesse.ohunelo.presentation.viewmodels.VerifyEmailViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.fragment.authentication.VerifyEmailFragment"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/verify_email_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIconTint="?attr/colorSecondaryVariant"
                app:titleTextColor="?attr/colorSecondaryVariant"
                app:titleTextAppearance="?attr/textAppearanceHeadline2"
                android:background="?attr/colorBackgroundCustom"
                app:titleCentered="true"
                app:title="@string/verify_email"
                app:navigationIcon="@drawable/arrow_back_icon"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verify_email_tool_bar">

                <ImageView
                    android:id="@+id/open_email_image_view"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_0dp"
                    android:contentDescription="@string/open_email_icon"
                    android:src="@drawable/mail_open_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".1"
                    app:layout_constraintWidth_percent=".3"
                    app:tint="?attr/colorSecondaryVariant" />

                <TextView
                    android:id="@+id/verify_email_header"
                    style="?attr/textAppearanceHeadline2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:text="@string/verify_your_email_address"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/open_email_image_view" />

                <TextView
                    android:id="@+id/verify_email_instruction_1"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_3"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/verify_your_email_instruction_1"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/verify_email_header" />

                <TextView
                    android:id="@+id/verify_email_instruction_2"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_3"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/verify_your_email_instruction_2"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/verify_email_instruction_1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continue_button"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/grid_8"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_4"
                    android:backgroundTint="?attr/colorSecondary"
                    android:text="@string/continue_text"
                    app:cornerRadius="@dimen/_15dp"
                    android:enabled="@{viewModel.verifyEmailUiState.enabled}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/verify_email_instruction_2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resend_email_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/grid_8"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_2"
                    android:text="@string/resend_e_mail_link"
                    android:textAppearance="?attr/textAppearanceButton"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:enabled="@{viewModel.verifyEmailUiState.enabled}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continue_button"
                    app:layout_constraintVertical_bias="0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>